Fix middle alignement for Add section add button

--- a/war/css/core.css
+++ b/war/css/core.css
@@ -195,3 +195,7 @@ input.file-upload {
 	padding-left:10px;
 }
 
+.v-align-middle {
+	vertical-align: middle;
+}
+
