--- a/war/css/renderer/editor.css
+++ b/war/css/renderer/editor.css
@@ -6,6 +6,11 @@
 	vertical-align:bottom;
 }
 
+/** override .editor div if v-align-middle is applied **/
+.editor div .v-align-middle div{
+	vertical-align:middle;
+}
+
 .editor .panel-disclosure-element-section a.header td {
 	vertical-align : bottom !important;
 }
